# NeuralGaits

./: .gitignore  .gitmodules  README.md  requirements.txt
Sim/amber3m-cpp/: .gitignore  CMakeLists.txt  Doxyfile  README.md
Sim/amber3m-cpp/AMBERmodel/: exportMatrices.m  modelDynamics.asv  modelDynamics.m  physicalparams.m
Sim/amber3m-cpp/AMBERmodel/Hardware/: CBF_Lf2s1.m  CBF_Lf2s2.m  CBF_Lf2s3.m  CBF_Lfs1.m  CBF_Lfs2.m  CBF_Lfs3.m  CBF_LgLfs1.m  CBF_LgLfs2.m  CBF_LgLfs3.m  CBF_ds1edx.m  CBF_ds2edx.m  CBF_ds3edx.m  CBF_s1.m  CBF_s2.m  CBF_s3.m  C_matrix.m  D_matrix.m  G_matrix.m  J_pcm.m  J_phip.m  Lf2y_matrix.m  LgLfy_matrix.m  ddydq_matrix.m  dydq_matrix.m  p_cm.m  p_hip.m  p_swing.m
Sim/amber3m-cpp/AMBERmodel/Hardware/safety_funcs/: Lf2_psw_lb.m  Lf2_psw_ub.m  Lf2_t_lb.m  Lf2_t_ub.m  Lf_psw_lb.m  Lf_psw_ub.m  Lf_t_lb.m  Lf_t_ub.m  LgLf_psw_lb.m  LgLf_psw_ub.m  LgLf_t_lb.m  LgLf_t_ub.m  psw_lb.m  psw_ub.m  t_lb.m  t_ub.m
Sim/amber3m-cpp/AMBERmodel/RaiSim/: CBF_Lf2s1.m  CBF_Lf2s2.m  CBF_Lfs2.m  CBF_Lfs3.m  CBF_LgLfs2.m  CBF_ds2edx.m  CBF_s3.m  D_matrix.m  J_pcm.m  J_phip.m  Lf2y_matrix.m  LgLfy_matrix.m  dz_2.m  p_cm.m  p_hip.m  zero_dynamics.m
Sim/amber3m-cpp/AMBERmodel/RaiSim/safety_funcs/: Lf2_psw_ub.m  Lf2_t_ub.m  LgLf_psw_ub.m  LgLf_t_ub.m  psw_lb.m  psw_ub.m
Sim/amber3m-cpp/Matlab/: DataPlot.m  SwingFootTrajectoryDesign.m  createBezier.m  solveCARE.m
Sim/amber3m-cpp/include/: Bezier.hpp  controller.hpp  estimator.hpp  lib.hpp  robot.hpp  robotParams.hpp  timer.hpp  trajectory.hpp  vars.h
Sim/amber3m-cpp/include_sim/: CBF_Js1q.m  CBF_Js2q.m  CBF_Js3q.m  CBF_Lf2s3.m  CBF_Lfs1.m  CBF_LgLfs1.m  CBF_LgLfs3.m  CBF_ds1edx.m  CBF_ds3edx.m  CBF_s1.m  CBF_s2.m  C_matrix.m  G_matrix.m  Lf2_psw_lb.m  Lf2_t_lb.m  Lf2he_matrix.m  Lf_psw_lb.m  Lf_psw_ub.m  Lf_t_lb.m  Lf_t_ub.m  LgLf_psw_lb.m  LgLf_t_lb.m  LgLfhe_matrix.m  ddydq_matrix.m  dydq_matrix.m  exportMatrices.m  fixRtwCrap.m  p_swing.m  switchsurface.m  t_lb.m  t_ub.m
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_Lf2s1/: CBF_Lf2s1.c  CBF_Lf2s1.h  CBF_Lf2s1_data.c  CBF_Lf2s1_data.h  CBF_Lf2s1_initialize.c  CBF_Lf2s1_initialize.h  CBF_Lf2s1_rtw.mk  CBF_Lf2s1_terminate.c  CBF_Lf2s1_terminate.h  CBF_Lf2s1_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_Lf2s2/: CBF_Lf2s2.c  CBF_Lf2s2.h  CBF_Lf2s2_data.c  CBF_Lf2s2_data.h  CBF_Lf2s2_initialize.c  CBF_Lf2s2_initialize.h  CBF_Lf2s2_rtw.mk  CBF_Lf2s2_terminate.c  CBF_Lf2s2_terminate.h  CBF_Lf2s2_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_Lf2s3/: CBF_Lf2s3.c  CBF_Lf2s3.h  CBF_Lf2s3_initialize.c  CBF_Lf2s3_initialize.h  CBF_Lf2s3_rtw.mk  CBF_Lf2s3_terminate.c  CBF_Lf2s3_terminate.h  CBF_Lf2s3_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_Lfs1/: CBF_Lfs1.c  CBF_Lfs1.h  CBF_Lfs1_initialize.c  CBF_Lfs1_initialize.h  CBF_Lfs1_rtw.mk  CBF_Lfs1_terminate.c  CBF_Lfs1_terminate.h  CBF_Lfs1_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_Lfs2/: CBF_Lfs2.c  CBF_Lfs2.h  CBF_Lfs2_initialize.c  CBF_Lfs2_initialize.h  CBF_Lfs2_rtw.mk  CBF_Lfs2_terminate.c  CBF_Lfs2_terminate.h  CBF_Lfs2_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_Lfs3/: CBF_Lfs3.c  CBF_Lfs3.h  CBF_Lfs3_initialize.c  CBF_Lfs3_initialize.h  CBF_Lfs3_rtw.mk  CBF_Lfs3_terminate.c  CBF_Lfs3_terminate.h  CBF_Lfs3_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_LgLfs1/: CBF_LgLfs1.c  CBF_LgLfs1.h  CBF_LgLfs1_initialize.c  CBF_LgLfs1_initialize.h  CBF_LgLfs1_rtw.mk  CBF_LgLfs1_terminate.c  CBF_LgLfs1_terminate.h  CBF_LgLfs1_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_LgLfs2/: CBF_LgLfs2.c  CBF_LgLfs2.h  CBF_LgLfs2_initialize.c  CBF_LgLfs2_initialize.h  CBF_LgLfs2_rtw.mk  CBF_LgLfs2_terminate.c  CBF_LgLfs2_terminate.h  CBF_LgLfs2_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_LgLfs3/: CBF_LgLfs3.c  CBF_LgLfs3.h  CBF_LgLfs3_initialize.c  CBF_LgLfs3_initialize.h  CBF_LgLfs3_rtw.mk  CBF_LgLfs3_terminate.c  CBF_LgLfs3_terminate.h  CBF_LgLfs3_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_ds1edx/: CBF_ds1edx.c  CBF_ds1edx.h  CBF_ds1edx_data.c  CBF_ds1edx_data.h  CBF_ds1edx_initialize.c  CBF_ds1edx_initialize.h  CBF_ds1edx_rtw.mk  CBF_ds1edx_terminate.c  CBF_ds1edx_terminate.h  CBF_ds1edx_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Sim/amber3m-cpp/include_sim/codegen/lib/CBF_ds2edx/: CBF_ds2edx.c  CBF_ds2edx.h  CBF_ds2edx_data.c  CBF_ds2edx_data.h  (+17 more)
Sim/amber3m-cpp/src/: BestPrefLearnGait  Bezier.cpp  DataPlot.asv  controller.cpp  estimator.cpp  lib.cpp  main.cpp  robot.cpp  timer.cpp  trajectory.cpp  trajectoryParams.yaml
Sim/learn-trajopt-cpp/: CMakeLists.txt
Sim/learn-trajopt-cpp/cmake/: config.cmake.in
Sim/learn-trajopt-cpp/include/: mlp_caller.h  torch_utils.h
Sim/learn-trajopt-cpp/tests/: CMakeLists.txt  test_load_model.cpp  test_mlp_caller.cpp  test_torch_eigen_interace.cpp
Sim/learn-trajopt-cpp/tests/data/: sample.th
Sim/raisim/: .gitignore  CMakeLists.txt
Sim/raisim/rsc/amber/: amber.urdf  amber_Grassa.urdf  amber_basic.urdf  five_link_walker.urdf
Sim/raisim/rsc/amber/mesh/: Shank_basic.STL  Thigh_basic.STL
Sim/raisim/src/robots/: .anymal.cpp.swp  amber.cpp  cppToYAML.cpp  genYAML.sh  imgui.ini  param_exp.yaml  param_gain.yaml
(+685 files in other folders)
